# GstrimerTest

./: CMakeLists.txt  Counter.cpp  Counter.h  README.md  bmp.cpp  bmp.h  cam.cfg  confZone1.txt  countingcam  environment-setup-cortexa9hf-vfp-neon-poky-linux-gnueabi_opencv_gstreamer1.0  gprs.cfg  test_gst.cpp
Counting/: Counter.cpp
autoexposure/: autoexposure.cpp  autoexposure.h
cam-config/: camconfig.cpp  camconfig.h
gpio/: gpio.cpp  gpio.h
gprs/: sim_tty.cpp  sim_tty.h
gst-server-lib/: rtsp-media-factory.c  rtsp-media-factory.h  rtsp-media.c  rtsp-media.h
http_requast/: http_requast.cpp  http_requast.h
readconfig/: read_config.cpp  read_config.h
